fabric/testdata/out/ing_donut-head-api-accounting-products-wildcard-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/accounting-products/**\") \u0026\u0026 Method(\"HEAD\") \u0026\u0026
      JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"aalexandre\",
      \"https://identity.zalando.com/managed-id\", \"gcarta\", \"https://identity.zalando.com/managed-id\",
      \"kanli\", \"https://identity.zalando.com/managed-id\", \"bmooney\", \"https://identity.zalando.com/managed-id\",
      \"egalligan\", \"https://identity.zalando.com/managed-id\", \"dagordon\", \"https://identity.zalando.com/managed-id\",
      \"rlagarferrei\", \"https://identity.zalando.com/managed-id\", \"brcullen\",
      \"https://identity.zalando.com/managed-id\", \"msung\", \"https://identity.zalando.com/managed-id\",
      \"ralmeida\", \"https://identity.zalando.com/managed-id\", \"aortega\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"e0340652-4fd4-11e9-9e4a-02c71e31bbc4","deployment-id":"d-27kxv9mag8z9hbrgy7y4gntd9j","pipeline-id":"l-stu8z4b4s9g6emmbbv9r45975"},"name":"donut-head-api-accounting-products-wildcard-admins","namespace":"default"},"spec":{"rules":[{"host":"donut.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"donut","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-accounting-dat [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/accounting-products/**")
      && Method("HEAD") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "aalexandre",
      "https://identity.zalando.com/managed-id", "gcarta", "https://identity.zalando.com/managed-id",
      "kanli", "https://identity.zalando.com/managed-id", "bmooney", "https://identity.zalando.com/managed-id",
      "egalligan", "https://identity.zalando.com/managed-id", "dagordon", "https://identity.zalando.com/managed-id",
      "rlagarferrei", "https://identity.zalando.com/managed-id", "brcullen", "https://identity.zalando.com/managed-id",
      "msung", "https://identity.zalando.com/managed-id", "ralmeida", "https://identity.zalando.com/managed-id",
      "aortega") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:47:34Z"
  generation: 1
  labels:
    controller-uid: e0340652-4fd4-11e9-9e4a-02c71e31bbc4
    deployment-id: d-27kxv9mag8z9hbrgy7y4gntd9j
    pipeline-id: l-stu8z4b4s9g6emmbbv9r45975
  name: donut-head-api-accounting-products-wildcard-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: donut
    uid: e0340652-4fd4-11e9-9e4a-02c71e31bbc4
  resourceVersion: "1370351324"
  uid: 75ee9f43-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: donut.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: donut
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-accounting-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: donut
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
